testcases/error/invalid_string_operand.veryl
module invalid_string_operand {
    let _a: string = "abc" + "def";
}
